# cnn-classifier-atv

./: README.md  ROTEIRO.md  ROTEIRO_FINE_TUNNING.md  ROTEIRO_TENSORFLOW.md  params.py  pyproject.toml
cnn_classifier/: fine_tune.py  predict.py  preprocess.py  train.py  utils.py
